--- a/static/style.css
+++ b/static/style.css
@@ -11,8 +11,56 @@ html {
 	line-height: 1.25;
 }
 
+.navbar {
+	background: #F5EFDF !important;
+}
+
 p {
 	font-family: var(--secondary-font);
+}
+
+.article li p {
+	margin: 0.5rem;
+	line-height: 1rem;
+}
+
+.articlesubtitle p {
+	font-weight: 900 !important;
+}
+
+.articleauthor {
+	font-style: italic;
+}
+
+.article p {
+	font-family: 'EB Garamond', serif;
+	font-size: 1rem;
+	font-weight: 300;
+}
+
+.firstletter {
+	font-size: 2rem;
+	font-weight: 900;	
+}
+
+/* .articledate {
+} */
+
+.articletitle {
+	font-size: 2.166rem;
+	font-weight: 900;
+}
+
+.article {
+	font-family: 'EB Garamond', serif;
+	font-size: 1rem;
+	font-weight: 300;
+	width: 600px;
+	max-width: none;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    width: 600px;
 }
 
 /* .navbar {
@@ -78,11 +126,13 @@ p {
 	font-style: italic;
 }
 
-/* .collage-image-container img {
-	height: 100%;
+.collage-image-container img {
+	/* height: 100%;
 	width: 100%;
-	padding-bottom: 0.333em;
-} */
+	padding-bottom: 0.333em; */
+	margin: auto;
+	display: block;
+}
 
 
 img {
