--- a/static/style.css
+++ b/static/style.css
@@ -24,6 +24,12 @@ p {
 	line-height: 1rem;
 }
 
+h3 {
+	text-decoration: underline;
+	font-weight: 900 !important;
+	font-size: 1em !important;
+}
+
 .articlesubtitle p {
 	font-weight: 900 !important;
 }
@@ -36,6 +42,7 @@ p {
 	font-family: 'EB Garamond', serif;
 	font-size: 1rem;
 	font-weight: 300;
+	text-align: justify;
 }
 
 .firstletter {
